Renjith commit-Design changes

--- a/webdesign.html
+++ b/webdesign.html
@@ -41,14 +41,14 @@
               </div>
               <div class="text">
                 <span>Email</span>
-                <span>youremail@email.com</span>
+                <span>techalora@gmail.com</span>
               </div>
             </div>
             <div class="col-md d-flex topper align-items-center align-items-stretch py-md-4">
               <div class="icon d-flex justify-content-center align-items-center"><span class="icon-phone2"></span></div>
               <div class="text">
                 <span>Call</span>
-                <span>Call Us: + 1235 2355 98</span>
+                <span>Call Us: +91 9656654051</span>
               </div>
             </div>
             <div class="col-md topper d-flex align-items-center justify-content-end">
@@ -169,22 +169,23 @@
             <h2 class="ftco-heading-2">Have a Questions?</h2>
             <div class="block-23 mb-3">
               <ul>
-                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San
-                    Francisco, California, USA</span></li>
-                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
+                <li><span class="icon icon-map-marker"></span><span class="text">AloraTech Pvt Lmtd, Kakkanad,
+                    Ernakulam, Kerala,India </span></li>
+                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+91 9656654051</span></a></li>
                 <li><a href="#"><span class="icon icon-envelope"></span><span
-                      class="text">info@yourdomain.com</span></a></li>
+                      class="text">techalora@gmail.com</span></a></li>
               </ul>
             </div>
           </div>
         </div>
+
         <div class="col-md-6 col-lg-4">
           <div class="ftco-footer-widget mb-5 ml-md-4">
             <h2 class="ftco-heading-2">Links</h2>
             <ul class="list-unstyled">
               <li><a href="index.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Home</a></li>
               <li><a href="about.html"><span class="ion-ios-arrow-round-forward mr-2"></span>About</a></li>
-              <li><a href="blog.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Services</a></li>
+              <li><a href="imageanotation.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Services</a></li>
               <li><a href="project.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Projects</a></li>
               <li><a href="contact.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Contact</a></li>
             </ul>
@@ -221,7 +222,8 @@
   <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
       <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
       <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10"
-        stroke="#F96D00" /></svg></div>
+        stroke="#F96D00" />
+    </svg></div>
 
 
   <script src="js/jquery.min.js"></script>
