--- a/about.html
+++ b/about.html
@@ -41,14 +41,14 @@
               </div>
               <div class="text">
                 <span>Email</span>
-                <span>youremail@email.com</span>
+                <span>techalora@gmail.com</span>
               </div>
             </div>
             <div class="col-md d-flex topper align-items-center align-items-stretch py-md-4">
               <div class="icon d-flex justify-content-center align-items-center"><span class="icon-phone2"></span></div>
               <div class="text">
                 <span>Call</span>
-                <span>Call Us: + 1235 2355 98</span>
+                <span>Call Us: + 9656654051</span>
               </div>
             </div>
             <div class="col-md topper d-flex align-items-center justify-content-end">
@@ -181,7 +181,7 @@
               <div class="testimony-wrap d-flex">
                 <div class="user-img" style="background-image: url(images/document.png)">
                 </div>
-                <div class="text pl-4">
+                <div class="text pl-4" style="overflow: hidden;">
                   <h5>Security of data</h5>
                   <p>The security and privacy of our client’s data is our prime concern. We follow the
                     strict measures
@@ -193,7 +193,7 @@
               <div class="testimony-wrap d-flex">
                 <div class="user-img" style="background-image: url(images/jigsaw.png)">
                 </div>
-                <div class="text pl-4">
+                <div class="text pl-4" style="overflow: hidden;">
                   <h5>Fast and flexible scalability</h5>
                   <p>We offer image recognition services to annotate images in the shortest time with
                     flexible
@@ -205,7 +205,7 @@
               <div class="testimony-wrap d-flex">
                 <div class="user-img" style="background-image: url(images/shield.png)">
                 </div>
-                <div class="text pl-4">
+                <div class="text pl-4" style="overflow: hidden;">
                   <h5>Quality Annotations</h5>
                   <p>AloraTech’s skilled workforce assuring guaranteed accuracy and quality by our
                     dedicated quality
@@ -217,7 +217,7 @@
               <div class="testimony-wrap d-flex">
                 <div class="user-img" style="background-image: url(images/group.png)">
                 </div>
-                <div class="text pl-4">
+                <div class="text pl-4" style="overflow: hidden;">
                   <h5>Team of experts</h5>
                   <p>We have a team with good soft and technical skills and well experienced more than
                     three years on
@@ -241,11 +241,11 @@
             <h2 class="ftco-heading-2">Have a Questions?</h2>
             <div class="block-23 mb-3">
               <ul>
-                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San
-                    Francisco, California, USA</span></li>
-                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
+                <li><span class="icon icon-map-marker"></span><span class="text">AloraTech Pvt Lmtd, Kakkanad,
+                    Ernakulam, Kerala,India </span></li>
+                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+91 9656654051</span></a></li>
                 <li><a href="#"><span class="icon icon-envelope"></span><span
-                      class="text">info@yourdomain.com</span></a></li>
+                      class="text">techalora@gmail.com</span></a></li>
               </ul>
             </div>
           </div>
@@ -256,7 +256,7 @@
             <ul class="list-unstyled">
               <li><a href="index.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Home</a></li>
               <li><a href="about.html"><span class="ion-ios-arrow-round-forward mr-2"></span>About</a></li>
-              <li><a href="blog.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Services</a></li>
+              <li><a href="imageanotation.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Services</a></li>
               <li><a href="project.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Projects</a></li>
               <li><a href="contact.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Contact</a></li>
             </ul>
@@ -293,7 +293,8 @@
   <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
       <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
       <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10"
-        stroke="#F96D00" /></svg></div>
+        stroke="#F96D00" />
+    </svg></div>
 
 
   <script src="js/jquery.min.js"></script>
