--- a/contact.html
+++ b/contact.html
@@ -45,14 +45,14 @@
               </div>
               <div class="text">
                 <span>Email</span>
-                <span>renjithsunny4145@email.com</span>
+                <span>techalora@gmail.com</span>
               </div>
             </div>
             <div class="col-md d-flex topper align-items-center align-items-stretch py-md-4">
               <div class="icon d-flex justify-content-center align-items-center"><span class="icon-phone2"></span></div>
               <div class="text">
                 <span>Call</span>
-                <span>Call Us: + 9656654051</span>
+                <span>Call Us: +91 9656654051</span>
               </div>
             </div>
             <div class="col-md topper d-flex align-items-center justify-content-end">
@@ -131,13 +131,13 @@
               <div class="icon">
                 <span class="icon-mobile-phone"></span>
               </div>
-              <p><span>Phone:</span> <a href="tel://1234567920">+ 9656654051</a></p>
+              <p><span>Phone:</span> <a href="tel://1234567920">+91 9656654051</a></p>
             </div>
             <div class="col-md-4 text-center py-4">
               <div class="icon">
                 <span class="icon-envelope-o"></span>
               </div>
-              <p><span>Email:</span> <a href="mailto:info@yoursite.com">renjithsunny4145@email.com</a></p>
+              <p><span>Email:</span> <a href="mailto:info@yoursite.com">techalora@gmail.com</a></p>
             </div>
           </div>
         </div>
@@ -190,11 +190,11 @@
             <h2 class="ftco-heading-2">Have a Questions?</h2>
             <div class="block-23 mb-3">
               <ul>
-                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San
-                    Francisco, California, USA</span></li>
+                <li><span class="icon icon-map-marker"></span><span class="text">AloraTech Pvt Lmtd, Kakkanad,
+                    Ernakulam, Kerala,India </span></li>
                 <li><a href="#"><span class="icon icon-phone"></span><span class="text">+91 9656654051</span></a></li>
                 <li><a href="#"><span class="icon icon-envelope"></span><span
-                      class="text">info@yourdomain.com</span></a></li>
+                      class="text">techalora@gmail.com</span></a></li>
               </ul>
             </div>
           </div>
@@ -205,7 +205,7 @@
             <ul class="list-unstyled">
               <li><a href="index.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Home</a></li>
               <li><a href="about.html"><span class="ion-ios-arrow-round-forward mr-2"></span>About</a></li>
-              <li><a href="blog.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Services</a></li>
+              <li><a href="imageanotation.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Services</a></li>
               <li><a href="project.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Projects</a></li>
               <li><a href="contact.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Contact</a></li>
             </ul>
@@ -242,7 +242,8 @@
   <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
       <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
       <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10"
-        stroke="#F96D00" /></svg></div>
+        stroke="#F96D00" />
+    </svg></div>
 
 
   <script src="js/jquery.min.js"></script>
